syntax = "proto3";

package scuffle.video.internal.events;

import "scuffle/types/ulid.proto";

message OrganizationEvent {
  int64 timestamp = 1;
  scuffle.types.Ulid id = 2;

  message RoomLive {
    scuffle.types.Ulid connection_id = 1;
    scuffle.types.Ulid room_id = 2;
  }

  message RoomReady {
    scuffle.types.Ulid connection_id = 1;
    scuffle.types.Ulid room_id = 2;
  }

  message RoomDisconnect {
    scuffle.types.Ulid connection_id = 1;
    scuffle.types.Ulid room_id = 2;
    bool clean = 3;
    optional string error = 4;
  }

  oneof event {
    RoomLive room_live = 3;
    RoomDisconnect room_disconnect = 4;
    RoomReady room_ready = 5;
  }
}